--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,8 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 31
 
+    namespace = "com.homex.open_mail_app"
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
